<?xml version="1.0"?>
<package>
  <name>youbot_ros_simple_trajectory</name>
  <version>0.0.0</version>
  <description>Simple demo program</description>
  <maintainer email="nowak@locomotec.com">Walter Nowak</maintainer>
  <license>LGPLv3</license>
  <url type="website">http://www.youbot-store.com</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>roscpp</run_depend>

</package>
